<resources>
    <string name="app_name">Application Design</string>
    <string name="C">C</string>
    <string name="Parentheses">()</string>
    <string name="division">%</string>
    <string name="_7">7</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="division2">/</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="plusMinus">+/-</string>
    <string name="_0">0</string>
    <string name="comma">.</string>
    <string name="equal">=</string>
    <string name="friend">친구</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="default_notification_channel_id">Channel ID</string>
    <string name="default_notification_channel_name" translatable="true">Test</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
